--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,4 +1,4 @@
 {
-  "Text_SelectCaseType": "Select Case Type",
-  "Text_EnterCaseDetails": "Enter Case Details"
+  "SelectCaseType": "Select Case Type",
+  "EnterCaseDetails": "Enter Case Details"
 }
