Add chinese and english selector, add waiting list button

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -1,5 +1,9 @@
 {
+  "Login": "登录",
+  "SignUp": "注册",
+  "SignOut": "退出",
   "LandingPage": {
+    "JoinWaitingList": "加入等待名单",
     "FastTrackDescription1": "使用我们训练的移民大语言模型AI，智能匹配申请类型，辅助修改申请资料",
     "FastTrackDescription2": "再交给我们专业的移民律师完善信息，确保您的申请万无一失。"
   },
