--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -3,6 +3,12 @@
   "SignUp": "注册",
   "SignOut": "退出",
   "LandingPage": {
+    "AiAssist": "AI辅助申请",
+    "AiAssistDescription": "AI大语言移民模型，解答您的任何疑问",
+    "ProfessionalLawyer": "专业移民律师",
+    "ProfessionalLawyerDescription": "专业移民律师，为您的申请保驾护航",
+    "TransparentPrice": "透明收费标准",
+    "TransparentPriceDescription": "一次性收取申请费用，中途没有任何附加费用",
     "JoinWaitingList": "加入等待名单",
     "FastTrackDescription1": "使用我们训练的移民大语言模型AI，智能匹配申请类型，辅助修改申请资料",
     "FastTrackDescription2": "再交给我们专业的移民律师完善信息，确保您的申请万无一失。"
