--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -3,6 +3,17 @@
   "SignUp": "注册",
   "SignOut": "退出",
   "LandingPage": {
+    "SupportedImmigrationTypes": "支持的移民类型",
+    "EnterEmail": "输入邮箱",
+    "CooperativeLawFirm": "合作律所",
+    "SubmitForReviewTitle": "送审更省心",
+    "SubmitForReviewLawyerReview": "专业律师审核",
+    "SubmitForReviewLawyerReviewDescription": "专业移民律师审核资料并辅助递交",
+    "SubmitForReviewNotification": "进度同步通知",
+    "SubmitForReviewNotificationDescription": "补充资料、面试均通知，不错过任何流程",
+    "AffordableGoodService": "平价好服务",
+    "AffordableDescription": "价格优惠，服务不打折",
+    "SignupEntryTitle": "立即体验<br>快速智能移民通道",
     "AiFilterType": "智能筛选类型",
     "AiFilterTypeDescription": "询问ai，智能匹配适合移民类型",
     "AiComplete": "智能完善资料",
