--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,6 +3,16 @@
   "SignUp": "Sign up",
   "SignOut": "Sign out",
   "LandingPage": {
+    "SupportedImmigrationTypes": "Supported immigration types",
+    "EnterEmail": "Enter your email",
+    "CooperativeLawFirm": "Cooperative law firm",
+    "SubmitForReviewTitle": "Submitting for review is more worry-free",
+    "SubmitForReviewLawyerReview": "Immigration lawyer review",
+    "SubmitForReviewLawyerReviewDescription": "Our professional immigration lawyers review documents and assist with submission",
+    "SubmitForReviewNotification": "Progress synchronization notification",
+    "SubmitForReviewNotificationDescription": "Supplementary information, interview and other synchronous notifications, not to miss any process",
+    "AffordableGoodService": "Affordable good service",
+    "AffordableDescription": "Price discounted, service not discounted",
     "SignupEntryTitle": "Register for <br> a fast application experience with AI",
     "AiFilterType": "Intelligent filter type",
     "AiFilterTypeDescription": "Ask AI, intelligent matching is suitable for immigration type",
