Update the static contentin homepage

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -4,31 +4,33 @@
   "SignOut": "退出",
   "LandingPage": {
     "SupportedImmigrationTypes": "支持的移民类型",
-    "EnterEmail": "输入邮箱",
-    "CooperativeLawFirm": "合作律所",
-    "SubmitForReviewTitle": "送审更省心",
-    "SubmitForReviewLawyerReview": "专业律师审核",
-    "SubmitForReviewLawyerReviewDescription": "专业移民律师审核资料并辅助递交",
-    "SubmitForReviewNotification": "进度同步通知",
-    "SubmitForReviewNotificationDescription": "补充资料、面试均通知，不错过任何流程",
-    "AffordableGoodService": "平价好服务",
-    "AffordableDescription": "价格优惠，服务不打折",
-    "SignupEntryTitle": "立即体验<br>快速智能移民通道",
-    "AiFilterType": "智能筛选类型",
-    "AiFilterTypeDescription": "询问ai，智能匹配适合移民类型",
-    "AiComplete": "智能完善资料",
-    "AiCompleteDescription": "输入信息，自动添加需要上传资料",
-    "AiTranslate": "AI翻译文件",
-    "AiTranslateDescription": "不懂英文？使用母语填写资料并智能翻译",
-    "AiAssist": "AI辅助申请",
-    "AiAssistDescription": "AI大语言移民模型，解答您的任何疑问",
-    "ProfessionalLawyer": "专业移民律师",
-    "ProfessionalLawyerDescription": "专业移民律师，为您的申请保驾护航",
-    "TransparentPrice": "透明收费标准",
-    "TransparentPriceDescription": "一次性收取申请费用，中途没有任何附加费用",
+    "EnterEmail": "输入您的电子邮件",
+    "CooperativeLawFirm": "值得信赖的法律合作伙伴",
+    "SubmitForReviewTitle": "无忧移民，每步皆轻松",
+    "SubmitForReviewLawyerReview": "专业律师团队审核",
+    "SubmitForReviewLawyerReviewDescription": "专业律师团队将为您的申请进行严格审核，确保每一环节都合规无误。",
+    "SubmitForReviewNotification": "实时案件跟踪",
+    "SubmitForReviewNotificationDescription": "提供即时移民状态更新，让您全程掌控动态，安心等待结果",
+    "AffordableGoodService": "经济实惠的价格",
+    "AffordableDescription": "降低成本，提升服务。",
+    "SignupEntryTitle": "注册以通过AI加速您的移民流程",
+    "AiFilterType": "即时AI咨询",
+    "AiFilterTypeDescription": "利用我们的智能系统，快速获得定制化移民建议，让决策更加明智。",
+    "AiComplete": "精准高效文书助手",
+    "AiCompleteDescription": "自动生成所需的一切文档，省时又省心，让移民流程更加顺畅。",
+    "AiTranslate": "智能表单自动填充",
+    "AiTranslateDescription": "仅需上传文件，AI便能智慧抽取所需信息，轻松填写各类表单。",
+    "AiAssist": "AI协助",
+    "AiAssistDescription": "利用AI精确生成文件，减少错误并节省时间。",
+    "ProfessionalLawyer": "专业律师",
+    "ProfessionalLawyerDescription": "专业律师团队严格审核文件，确保无懈可击",
+    "TransparentPrice": "公平定价",
+    "TransparentPriceDescription": "价格公正透明，承诺全程无隐形费用。",
+    "TrackProgress": "随时更新",
+    "TrackProgressDescription": "实时跟踪案件状态，让您的旅程更加清晰。",
     "JoinWaitingList": "加入等待名单",
-    "FastTrackDescription1": "使用我们训练的移民大语言模型AI，智能匹配申请类型，辅助修改申请资料",
-    "FastTrackDescription2": "再交给我们专业的移民律师完善信息，确保您的申请万无一失。"
+    "FastTrackDescription1": "用尖端AI革新您的美国移民过程，快速实现您的美国梦。",
+    "FastTrackDescription2": "<strong>专业</strong>律师然后完善信息以<strong>确保</strong>一个<strong>万无一失</strong>的申请"
   },
   "SelectCaseType": "选择申请类型",
   "EnterCaseDetails": "填写信息",
