--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -5,29 +5,31 @@
   "LandingPage": {
     "SupportedImmigrationTypes": "Supported immigration types",
     "EnterEmail": "Enter your email",
-    "CooperativeLawFirm": "Cooperative law firm",
-    "SubmitForReviewTitle": "Submitting for review is more worry-free",
-    "SubmitForReviewLawyerReview": "Immigration lawyer review",
-    "SubmitForReviewLawyerReviewDescription": "Our professional immigration lawyers review documents and assist with submission",
-    "SubmitForReviewNotification": "Progress synchronization notification",
-    "SubmitForReviewNotificationDescription": "Supplementary information, interview and other synchronous notifications, not to miss any process",
-    "AffordableGoodService": "Affordable good service",
-    "AffordableDescription": "Price discounted, service not discounted",
-    "SignupEntryTitle": "Register for <br> a fast application experience with AI",
-    "AiFilterType": "Intelligent filter type",
-    "AiFilterTypeDescription": "Ask AI, intelligent matching is suitable for immigration type",
-    "AiComplete": "Intelligent improvement of data",
-    "AiCompleteDescription": "AI completes the application form and provides a complete application package",
-    "AiTranslate": "AI translation file",
-    "AiTranslateDescription": "AI translates the application materials into the target language",
-    "AiAssist": "AI Assist",
-    "AiAssistDescription": "AI assists in modifying the application materials",
+    "CooperativeLawFirm": "Trusted Legal Partners",
+    "SubmitForReviewTitle": "Worry-free Immigration at Every Step",
+    "SubmitForReviewLawyerReview": "Expert Legal Review",
+    "SubmitForReviewLawyerReviewDescription": "Lawyer-verified documentation to guarantee flawless compliance and peace of mind.",
+    "SubmitForReviewNotification": "Real-Time Case Tracking",
+    "SubmitForReviewNotificationDescription": "Stay informed with live updates, ensuring transparency and guidance at every step.",
+    "AffordableGoodService": "Affordable Pricing",
+    "AffordableDescription": "Reducing Costs, Enhancing Service.",
+    "SignupEntryTitle": "Sign Up for a Fast Immigration Process Powered by AI",
+    "AiFilterType": "Instant AI Consultations",
+    "AiFilterTypeDescription": "Provides real-time answers to immigration queries, bypassing email delays.",
+    "AiComplete": "AI-Powered Document Creation",
+    "AiCompleteDescription": "Automatically generates accurate documents, reducing errors and saving time.",
+    "AiTranslate": "Automated Form Filling",
+    "AiTranslateDescription": "Simply upload documents; AI intelligently extracts relevant information to seamlessly fill in forms.",
+    "AiAssist": "AI Assistance",
+    "AiAssistDescription": "Leverage AI for precise document generation, reducing errors and saving time.",
     "ProfessionalLawyer": "Professional Lawyer",
-    "ProfessionalLawyerDescription": "Professional lawyers perfect the information to ensure a foolproof application",
-    "TransparentPrice": "Transparent Price",
-    "TransparentPriceDescription": "Transparent price and no hidden fees",
+    "ProfessionalLawyerDescription": "Professional legal reviews to ensure your documentation is flawless and compliant.",
+    "TransparentPrice": "Fair Pricing",
+    "TransparentPriceDescription": "Transparent and fair pricing ensure you know the costs, with no hidden fees.",
+    "TrackProgress": "Stay Updated",
+    "TrackProgressDescription": "Keep tracking of case status in real-time, providing clarity throughout your journey.",
     "JoinWaitingList": "Join the waiting list",
-    "FastTrackDescription1": "Our <strong>AI</strong> matches immigration <strong>application types</strong> and assists in <strong>modifying materials</strong>",
+    "FastTrackDescription1": "Revolutionize your U.S. immigration process with cutting-edge AI, fast-tracking your American dream.",
     "FastTrackDescription2": "<strong>Professional</strong> lawyers then perfect the information to <strong>ensure</strong> a <strong>foolproof</strong> application"
   },
   "SelectCaseType": "Select Case Type",
