Update the price section

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -3,6 +3,15 @@
   "SignUp": "注册",
   "SignOut": "退出",
   "LandingPage": {
+    "Lawyer": "律师",
+    "Applicant": "申请人",
+    "StableCustomers": "稳定的客户来源",
+    "FastCheckout": "快速结账期，每周结算",
+    "CheapServiceFee": "低廉的抽成费用",
+    "StripeIntegration": "Stripe第三方资金安全保障",
+    "VerifiedLawyers": "经过认证的专业律师",
+    "MultipleWayToPay": "多样的支付方式",
+    "RefundableBeforeService": "开始服务前资金100%可退还",
     "SupportedImmigrationTypes": "支持的移民类型",
     "EnterEmail": "输入您的电子邮件",
     "CooperativeLawFirm": "值得信赖的法律合作伙伴",
