--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,6 +3,15 @@
   "SignUp": "Sign up",
   "SignOut": "Sign out",
   "LandingPage": {
+    "Lawyer": "Lawyer",
+    "Applicant": "Applicant",
+    "StableCustomers": "Stable source of customers",
+    "FastCheckout": "Fast billing cycle, weekly settlement",
+    "CheapServiceFee": "Low commission fees",
+    "StripeIntegration": "Security fund guarantee for Stripe",
+    "VerifiedLawyers": "Certified Professional lawyers",
+    "MultipleWayToPay": "A variety of payment methods",
+    "RefundableBeforeService": "100% refundable before service",
     "SupportedImmigrationTypes": "Supported immigration types",
     "EnterEmail": "Enter your email",
     "CooperativeLawFirm": "Trusted Legal Partners",
