--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -7,6 +7,7 @@
   "TermsService": "Terms of Service",
   "PrivacyPolicy": "Privacy Policy",
   "ImmigrationWebsite": "Immigration website",
+  "Compare": "Compare",
   "Login": "Log in",
   "SignUp": "Sign up",
   "SignOut": "Sign out",
