--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -79,6 +79,9 @@
   "PersonalInformation": "Personal Information",
   "IdVerfication": "ID Verification",
   "ContactInformation": "Contact Information",
+  "UploadPassport": "Upload Passport",
+  "UploadPassportDescription1": "Upload images of the tront side of your business representative's These images will be used for identity verification purposes.",
+  "UploadPassportDescription2": "Be sure that your images include all information on the front side of your ID, including any signatures. Images also need to be clear, without any warped or blurred portions.",
   "Dashboard": {
     "Dashboard": "Dashboard",
     "FirstApplication": "Start Your First Application",
