Implement select component

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -56,29 +56,52 @@
   },
   "SelectCaseType": "选择申请类型",
   "EnterCaseDetails": "填写信息",
-  "ImmigrationType": "移民类型",
-  "ImmigrationReason": "移民原因",
-  "Tips": "提示",
-  "PersonalInformation": "个人信息",
-  "FamilyInformation": "家庭信息",
-  "FirstName": "名",
-  "LastName": "姓",
-  "MiddleName": "中间名",
   "ErrorMessage": {
-    "InvalidPasswordFormat": "密码必须至少8位数，并且包含至少一个英文字符，一个大写字母，和一个小写字母",
-    "InvalidEmailFormat": "邮箱格式不正确"
+    "InvalidPasswordFormat": "密码必须至少包含8个字符，并且包括至少1个数字、1个大写字母和1个小写字母",
+    "InvalidEmailFormat": "无效的电子邮件格式",
+    "EmailRequired": "请输入您的电子邮件地址",
+    "PasswordRequired": "请输入您的密码",
+    "ConfirmPasswordRequired": "请确认您的密码",
+    "PasswordsDoNotMatch": "密码不匹配",
+    "IncorrectEmailOrPassword": "电子邮件或密码错误",
+    "ErrorSigningIn": "无法使用提供的凭证登录。请稍后再试",
+    "CodeRequired": "请输入验证码",
+    "InvalidCodeFormat": "验证码必须是6位数字"
   },
+  "Email": "电子邮件",
   "Password": "密码",
+  "NewPassword": "新密码",
   "ConfirmPassword": "确认密码",
-  "Email": "邮箱",
-  "PhoneNumber": "手机号",
+  "ConfirmNewPassword": "再次输入新密码",
+  "VerificationCode": "验证码",
+  "PhoneNumber": "电话号码",
+  "InputConfirmationCode": "请输入发送到以下地址的验证码：",
+  "PersonalInformation": "个人信息",
+  "IdVerfication": "身份验证",
+  "ContactInformation": "联系信息",
+  "UploadPassport": "上传护照",
+  "UploadPassportDescription1": "上传您的业务代表的护照正面图片。这些图片将用于身份验证。",
+  "UploadPassportDescription2": "确保您的图片包括身份证正面的所有信息，包括任何签名。图片也需要清晰，没有任何扭曲或模糊的部分。",
+  "NoPassport": "我没有护照",
+  "UploadOtherId": "上传其他身份证件",
+  "NoPassportSelected": "您的选择：我没有护照",
+  "ReturnToPassportUpload": "返回护照上传",
+  "Confirm": "确认",
   "Dashboard": {
     "Dashboard": "仪表盘",
     "FirstApplication": "开始您的第一个申请吧",
     "GreetingMessage": "体验快速智能移民通道就是现在",
     "CreateNewApplication": "新建申请"
   },
-  "Application": {
+  "ImmigrationType": "移民类型",
+  "ImmigrationReason": "移民原因",
+  "Tips": "提示",
+  "FamilyInformation": "家庭信息",
+  "FirstName": "名",
+  "LastName": "姓",
+  "MiddleName": "中间名",
+  "OtherNames": "曾用名",
+  "NewCaseField": {
     "EntryLocation": {
       "Title": "请选择您的在美国的入境地址",
       "PlaceHolder": {
@@ -94,5 +117,253 @@
         "City": "市"
       }
     }
-  }
+  },
+  "Gender": "性别",
+  "GenderOptions": [
+    "男", 
+    "女"
+  ],
+  "MaritalStatus": "婚姻状况",
+  "MaritalStatusOptions": [
+    "已婚",
+    "未婚",
+    "离异",
+    "丧偶"
+  ],
+  "Race": "种族",
+  "RaceOptions": [
+    "美洲印第安人或阿拉斯加土著",
+    "亚洲人",
+    "黑人或非洲美国人",
+    "西班牙裔或拉丁美洲人",
+    "夏威夷土著或其他太平洋岛民",
+    "白人"
+  ],
+  "Religion": "宗教",
+  "ReligionOptions": [
+    "非洲传统宗教与散居民族宗教",
+    "不可知论者",
+    "无神论者",
+    "巴哈伊教",
+    "佛教",
+    "高台教",
+    "中国传统宗教",
+    "基督教",
+    "印度教",
+    "伊斯兰教",
+    "耆那教",
+    "主体思想",
+    "犹太教",
+    "新异教",
+    "非宗教人士",
+    "拉斯塔法里教",
+    "世俗",
+    "神道教",
+    "锡克教",
+    "灵性主义",
+    "天理教",
+    "泛神论-普遍主义",
+    "琐罗亚斯德教",
+    "原始-土著宗教",
+    "其他"
+  ],
+  "NationalityAtBirth": "出生国籍",
+  "NationalityOptions": [
+    "阿富汗人",
+    "阿尔巴尼亚人",
+    "阿尔及利亚人",
+    "美国人",
+    "安道尔人",
+    "安哥拉人",
+    "安提瓜和巴布达人",
+    "阿根廷人",
+    "亚美尼亚人",
+    "澳大利亚人",
+    "奥地利人",
+    "阿塞拜疆人",
+    "巴哈马人",
+    "巴林人",
+    "孟加拉国人",
+    "巴巴多斯人",
+    "白俄罗斯人",
+    "比利时人",
+    "伯利兹人",
+    "贝宁人",
+    "不丹人",
+    "玻利维亚人",
+    "波斯尼亚人",
+    "博茨瓦纳人",
+    "巴西人",
+    "英国人",
+    "文莱人",
+    "保加利亚人",
+    "布基纳法索人",
+    "缅甸人",
+    "布隆迪人",
+    "佛得角人",
+    "柬埔寨人",
+    "喀麦隆人",
+    "加拿大人",
+    "中非人",
+    "乍得人",
+    "智利人",
+    "中国人",
+    "哥伦比亚人",
+    "科摩罗人",
+    "刚果（布）人",
+    "刚果（金）人",
+    "哥斯达黎加人",
+    "克罗地亚人",
+    "古巴人",
+    "塞浦路斯人",
+    "捷克人",
+    "丹麦人",
+    "吉布提人",
+    "多米尼克人",
+    "多米尼加共和国人",
+    "荷兰人",
+    "东帝汶人",
+    "厄瓜多尔人",
+    "埃及人",
+    "阿联酋人",
+    "英格兰人",
+    "赤道几内亚人",
+    "厄立特里亚人",
+    "爱沙尼亚人",
+    "斯威士兰人",
+    "埃塞俄比亚人",
+    "斐济人",
+    "菲律宾人",
+    "芬兰人",
+    "法国人",
+    "加蓬人",
+    "冈比亚人",
+    "格鲁吉亚人",
+    "德国人",
+    "加纳人",
+    "希腊人",
+    "格林纳达人",
+    "危地马拉人",
+    "几内亚比绍人",
+    "几内亚人",
+    "圭亚那人",
+    "海地人",
+    "洪都拉斯人",
+    "匈牙利人",
+    "冰岛人",
+    "印度人",
+    "印度尼西亚人",
+    "伊朗人",
+    "伊拉克人",
+    "爱尔兰人",
+    "以色列人",
+    "意大利人",
+    "科特迪瓦人",
+    "牙买加人",
+    "日本人",
+    "约旦人",
+    "哈萨克斯坦人",
+    "肯尼亚人",
+    "圣基茨和尼维斯人",
+    "科威特人",
+    "吉尔吉斯斯坦人",
+    "老挝人",
+    "拉脱维亚人",
+    "黎巴嫩人",
+    "利比里亚人",
+    "利比亚人",
+    "列支敦士登人",
+    "立陶宛人",
+    "卢森堡人",
+    "北马其顿人",
+    "马达加斯加人",
+    "马拉维人",
+    "马来西亚人",
+    "马尔代夫人",
+    "马里人",
+    "马耳他人",
+    "马绍尔群岛人",
+    "毛里塔尼亚人",
+    "毛里求斯人",
+    "墨西哥人",
+    "密克罗尼西亚人",
+    "摩尔多瓦人",
+    "摩纳哥人",
+    "蒙古人",
+    "黑山人",
+    "摩洛哥人",
+    "莫桑比克人",
+    "纳米比亚人",
+    "瑙鲁人",
+    "尼泊尔人",
+    "新西兰人",
+    "尼加拉瓜人",
+    "尼日利亚人",
+    "尼日尔人",
+    "朝鲜人",
+    "北爱尔兰人",
+    "挪威人",
+    "阿曼人",
+    "巴基斯坦人",
+    "帕劳人",
+    "巴勒斯坦人",
+    "巴拿马人",
+    "巴布亚新几内亚人",
+    "巴拉圭人",
+    "秘鲁人",
+    "波兰人",
+    "葡萄牙人",
+    "卡塔尔人",
+    "罗马尼亚人",
+    "俄罗斯人",
+    "卢旺达人",
+    "圣卢西亚人",
+    "萨尔瓦多人",
+    "萨摩亚人",
+    "圣马力诺人",
+    "圣多美和普林西比人",
+    "沙特阿拉伯人",
+    "苏格兰人",
+    "塞内加尔人",
+    "塞尔维亚人",
+    "塞舌尔人",
+    "塞拉利昂人",
+    "新加坡人",
+    "斯洛伐克人",
+    "斯洛文尼亚人",
+    "所罗门群岛人",
+    "索马里人",
+    "南非人",
+    "韩国人",
+    "南苏丹人",
+    "西班牙人",
+    "斯里兰卡人",
+    "苏丹人",
+    "苏里南人",
+    "斯威士兰人",
+    "瑞典人",
+    "瑞士人",
+    "叙利亚人",
+    "台湾人",
+    "塔吉克斯坦人",
+    "坦桑尼亚人",
+    "泰国人",
+    "多哥人",
+    "汤加人",
+    "特立尼达和多巴哥人",
+    "突尼斯人",
+    "土耳其人",
+    "图瓦卢人",
+    "乌干达人",
+    "乌克兰人",
+    "乌拉圭人",
+    "乌兹别克斯坦人",
+    "委内瑞拉人",
+    "越南人",
+    "威尔士人",
+    "也门人",
+    "赞比亚人",
+    "津巴布韦人"
+  ],
+  "LocationOfBirth": "出生地"
 }
