--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -93,7 +93,15 @@
     "GreetingMessage": "Experience the fast and smart immigration service now.",
     "CreateNewApplication": "Create"
   },
-  "Application": {
+  "ImmigrationType": "Immigration Type",
+  "ImmigrationReason": "Immigration Reason",
+  "Tips": "Tips",
+  "FamilyInformation": "Family Information",
+  "FirstName": "First Name",
+  "LastName": "Last Name",
+  "MiddleName": "Middle Name",
+  "OtherNames": "Other Names",
+  "NewCaseField": {
     "EntryLocation": {
       "Title": "Enter the Place of Entry",
       "PlaceHolder": {
@@ -109,5 +117,253 @@
         "City": "Select City"
       }
     }
-  }
+  },
+  "Gender": "Gender",
+  "GenderOptions": [
+    "Male",
+    "Female"
+  ],
+  "MaritalStatus": "Marital Status",
+  "MaritalStatusOptions":[
+    "Single",
+    "Married",
+    "Divorced",
+    "Widowed"
+  ],
+  "Race": "Race",
+  "RaceOptions": [
+    "American Indian or Alaska Native",
+    "Asian",
+    "Black or African American",
+    "Hispanic or Latino",
+    "Native Hawaiian or Other Pacific Islander",
+    "White"
+  ],
+  "Religion": "Religion",
+  "ReligionOptions": [
+    "African Traditional & Diasporic",
+    "Agnostic",
+    "Atheist",
+    "Baha'i",
+    "Buddhism",
+    "Cao Dai",
+    "Chinese traditional religion",
+    "Christianity",
+    "Hinduism",
+    "Islam",
+    "Jainism",
+    "Juche",
+    "Judaism",
+    "Neo-Paganism",
+    "Non-religious",
+    "Rastafarianism",
+    "Secular",
+    "Shinto",
+    "Sikhism",
+    "Spiritism",
+    "Tenrikyo",
+    "Unitarian-Universalism",
+    "Zoroastrianism",
+    "Primal-indigenous",
+    "Other"
+  ],
+  "NationalityAtBirth": "Nationality at Birth",
+  "NationalityOptions": [
+    "Afghan",
+    "Albanian",
+    "Algerian",
+    "American",
+    "Andorran",
+    "Angolan",
+    "Antiguans",
+    "Argentine",
+    "Armenian",
+    "Australian",
+    "Austrian",
+    "Azerbaijani",
+    "Bahamian",
+    "Bahraini",
+    "Bangladeshi",
+    "Barbadian",
+    "Belarusian",
+    "Belgian",
+    "Belizean",
+    "Beninese",
+    "Bhutanese",
+    "Bolivian",
+    "Bosnian",
+    "Botswanan",
+    "Brazilian",
+    "British",
+    "Bruneian",
+    "Bulgarian",
+    "Burkinabe",
+    "Burmese",
+    "Burundian",
+    "Cabo Verdean",
+    "Cambodian",
+    "Cameroonian",
+    "Canadian",
+    "Central African",
+    "Chadian",
+    "Chilean",
+    "Chinese",
+    "Colombian",
+    "Comoran",
+    "Congolese (Congo)",
+    "Congolese (DRC)",
+    "Costa Rican",
+    "Croatian",
+    "Cuban",
+    "Cypriot",
+    "Czech",
+    "Danish",
+    "Djiboutian",
+    "Dominican (Dominica)",
+    "Dominican (Republic)",
+    "Dutch",
+    "East Timorese",
+    "Ecuadorean",
+    "Egyptian",
+    "Emirati",
+    "English",
+    "Equatorial Guinean",
+    "Eritrean",
+    "Estonian",
+    "Eswatini",
+    "Ethiopian",
+    "Fijian",
+    "Filipino",
+    "Finnish",
+    "French",
+    "Gabonese",
+    "Gambian",
+    "Georgian",
+    "German",
+    "Ghanaian",
+    "Greek",
+    "Grenadian",
+    "Guatemalan",
+    "Guinea-Bissauan",
+    "Guinean",
+    "Guyanese",
+    "Haitian",
+    "Honduran",
+    "Hungarian",
+    "Icelander",
+    "Indian",
+    "Indonesian",
+    "Iranian",
+    "Iraqi",
+    "Irish",
+    "Israeli",
+    "Italian",
+    "Ivorian",
+    "Jamaican",
+    "Japanese",
+    "Jordanian",
+    "Kazakhstani",
+    "Kenyan",
+    "Kittitian and Nevisian",
+    "Kuwaiti",
+    "Kyrgyz",
+    "Laotian",
+    "Latvian",
+    "Lebanese",
+    "Liberian",
+    "Libyan",
+    "Liechtensteiner",
+    "Lithuanian",
+    "Luxembourger",
+    "Macedonian",
+    "Malagasy",
+    "Malawian",
+    "Malaysian",
+    "Maldivian",
+    "Malian",
+    "Maltese",
+    "Marshallese",
+    "Mauritanian",
+    "Mauritian",
+    "Mexican",
+    "Micronesian",
+    "Moldovan",
+    "Monacan",
+    "Mongolian",
+    "Montenegrin",
+    "Moroccan",
+    "Mozambican",
+    "Namibian",
+    "Nauruan",
+    "Nepalese",
+    "New Zealander",
+    "Nicaraguan",
+    "Nigerian",
+    "Nigerien",
+    "North Korean",
+    "Northern Irish",
+    "Norwegian",
+    "Omani",
+    "Pakistani",
+    "Palauan",
+    "Palestinian",
+    "Panamanian",
+    "Papua New Guinean",
+    "Paraguayan",
+    "Peruvian",
+    "Polish",
+    "Portuguese",
+    "Qatari",
+    "Romanian",
+    "Russian",
+    "Rwandan",
+    "Saint Lucian",
+    "Salvadoran",
+    "Samoan",
+    "San Marinese",
+    "Sao Tomean",
+    "Saudi",
+    "Scottish",
+    "Senegalese",
+    "Serbian",
+    "Seychellois",
+    "Sierra Leonean",
+    "Singaporean",
+    "Slovak",
+    "Slovenian",
+    "Solomon Islander",
+    "Somali",
+    "South African",
+    "South Korean",
+    "South Sudanese",
+    "Spanish",
+    "Sri Lankan",
+    "Sudanese",
+    "Surinamese",
+    "Swazi",
+    "Swedish",
+    "Swiss",
+    "Syrian",
+    "Taiwanese",
+    "Tajik",
+    "Tanzanian",
+    "Thai",
+    "Togolese",
+    "Tongan",
+    "Trinidadian or Tobagonian",
+    "Tunisian",
+    "Turkish",
+    "Tuvaluan",
+    "Ugandan",
+    "Ukrainian",
+    "Uruguayan",
+    "Uzbek",
+    "Venezuelan",
+    "Vietnamese",
+    "Welsh",
+    "Yemeni",
+    "Zambian",
+    "Zimbabwean"
+  ],
+  "LocationOfBirth": "Location of Birth"
 }
