--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -126,7 +126,10 @@
   "Male": "男",
   "Female": "女",
   "MaritalStatus": "婚姻状况",
-  "MaritalStatusOptions": ["已婚", "未婚", "离异", "丧偶"],
+  "Single": "未婚",
+  "Married": "已婚",
+  "Divorced": "离异",
+  "Widowed": "丧偶",
   "Race": "种族",
   "RaceOptions": [
     "美洲印第安人或阿拉斯加土著",
@@ -363,6 +366,7 @@
     "赞比亚人",
     "津巴布韦人"
   ],
+  "PhoneNumberFormat": "(区域代码)-XXX-XXXX",
   "LocationOfBirth": "出生地",
   "FluentInEnglish": "我可以流利地说英语"
 }
