Complete 589 JSON - i589_form

--- a/src/locales/cn/translation.json
+++ b/src/locales/cn/translation.json
@@ -77,10 +77,6 @@
   "VerificationCode": "验证码",
   "PhoneNumber": "电话号码",
   "InputConfirmationCode": "请输入发送到以下地址的验证码：",
-  "PersonalInformation": "个人信息",
-  "BasicInformation": "Basic Information",
-  "IdVerfication": "身份验证",
-  "ContactInformation": "联系信息",
   "UploadPassport": "上传护照",
   "UploadPassportDescription1": "上传您的业务代表的护照正面图片。这些图片将用于身份验证。",
   "UploadPassportDescription2": "确保您的图片包括身份证正面的所有信息，包括任何签名。图片也需要清晰，没有任何扭曲或模糊的部分。",
@@ -99,12 +95,39 @@
   "ImmigrationType": "移民类型",
   "ImmigrationReason": "移民原因",
   "Tips": "提示",
+
+  "PersonalInformation": "个人信息",
+  "BasicInformation": "基本信息",
+  "ContactInformation": "联系信息",
+  "ImmigrationInformation": "移民信息",
   "FamilyInformation": "家庭信息",
+  "SpouseInformation": "配偶信息",
+  "ChildrenInformation": "子女信息",
+  "ParentsInformation": "父母信息",
+  "SiblingsInformation": "兄弟姐妹",
+  "BackgroundInformation": "背景信息",
+  "AddressInformation": "地址信息",
+  "EducationInformation": "教育信息",
+  "EmploymentInformation": "就业信息",
+  "ApplicationInformation": "申请信息",
+  "AsylumClaim": "庇护申请",
+  "AdditionalInformation": "额外信息",
+  "GenerateDocument": "生成文档",
+  "GenerateReport": "生成报告",
+
+  "IdNumber": "证件号码",
+  "IdInformation": "证件信息",
+  "PassportNumber": "护照号码",
+  "TravelDocumentNumber": "旅行证件号码",
+  
+  "IdExpirationDate": "证件到期日期",
+  "IdIssuingCountry": "证件签发国家",
   "FirstName": "名",
   "LastName": "姓",
   "MiddleName": "中间名",
   "OtherNames": "曾用名",
   "OtherNamesNAText": "我没有其他名字",
+
   "NewCaseField": {
     "EntryLocation": {
       "Title": "请选择您的在美国的入境地址",
