--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -80,12 +80,9 @@
   "VerificationCode": "Verification Code",
   "PhoneNumber": "Phone Number",
   "InputConfirmationCode": "Please input the verification code sent to: ",
-  "PersonalInformation": "Personal Information",
-  "BasicInformation": "Basic Information",
-  "IdVerfication": "ID Verification",
-  "ContactInformation": "Contact Information",
+  
   "UploadPassport": "Upload Passport",
-  "UploadPassportDescription1": "Upload images of the tront side of your business representative's These images will be used for identity verification purposes.",
+  "UploadPassportDescription1": "Upload images of the front side of your business representative's These images will be used for identity verification purposes.",
   "UploadPassportDescription2": "Be sure that your images include all information on the front side of your ID, including any signatures. Images also need to be clear, without any warped or blurred portions.",
   "NoPassport": "I don't have a passport",
   "UploadOtherId": "Upload Other ID",
@@ -102,12 +99,40 @@
   "ImmigrationType": "Immigration Type",
   "ImmigrationReason": "Immigration Reason",
   "Tips": "Tips",
-  "FamilyInformation": "Family Information",
+
+  "PersonalInformation": "Personal",
+  "BasicInformation": "Basic",
+  "ContactInformation": "Contact",
+  "ImmigrationInformation": "Immigration",
+  "FamilyInformation": "Family",
+  "SpouseInformation": "Spouse",
+  "ChildrenInformation": "Children",
+  "ParentsInformation": "Parents",
+  "SiblingsInformation": "Siblings",
+  "BackgroundInformation": "Background",
+  "AddressInformation": "Address",
+  "EducationInformation": "Education",
+  "EmploymentInformation": "Employment",
+  "ApplicationInformation": "Application",
+  "AsylumClaim": "Asylum",
+  "AdditionalInformation": "Additional",
+  "GenerateDocument": "Generate Report",
+  "GenerateReport": "Generate Report",
+
+  "IdNumber": "ID Number",
+  "IdInformation": "ID Information",
+  
+  "PassportNumber": "Passport Number",
+  "TravelDocumentNumber": "Travel Document Number",
+  "IdExpirationDate": "ID Expiration Date",
+  "IdIssuingCountry": "ID Issuing Country",
+
   "FirstName": "First Name",
   "LastName": "Last Name",
   "MiddleName": "Middle Name",
   "OtherNames": "Other Names",
   "OtherNamesNAText": "I don't have other names",
+  
   "NewCaseField": {
     "EntryLocation": {
       "Title": "Enter the Place of Entry",
